--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -13,12 +13,16 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "otp-generator": "^4.0.1",
