--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
