--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "debug": "^4.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.3",
