--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "concurrently": "^9.2.1",
     "debug": "^4.4.3",
     "react": "^18.2.0",
