--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "axios": "^1.13.2",
     "concurrently": "^9.2.1",
     "debug": "^4.4.3",
+    "mongoose": "^9.1.5",
+    "nodemon": "^3.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
