--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^3.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
