--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^3.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.4.0",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.30.3",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
